--- a/src/app/Components/reviews/reviews.component.html
+++ b/src/app/Components/reviews/reviews.component.html
@@ -1,7 +1,7 @@
 <div>
     <h1 class="my-4">Guest reviews</h1>
-    <div class="bg-white pr-3 pl-3 pt-3 col-8" style="border-radius: 4px;">
-        <div *ngFor="let review of propReviews">
+    <div>
+        <div *ngFor="let review of propReviews" class="bg-white pr-3 pl-3 pt-3 col-8" style="border-radius: 4px;">
             <div class="row">
                 <div class="col-5 d-flex justify-content-between">
                     <img class="personal-image" src="assets/photo-1604223190546-a43e4c7f29d7.jpg" alt="">
@@ -19,6 +19,17 @@
 
             </div>
             <hr>
+        </div>
+    </div>
+    <div *ngIf="!propReviews">
+        <div class="d-flex py-5 my-5 justify-content-lg-center align-items-center flex-column">
+            <svg data-test-id="default-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="70px"
+                fill="#888888" height="70px" class="bui-empty-state__icon">
+                <path
+                    d="M13.629 22.5H2.25a.75.75 0 0 1-.75-.75V2.25a.75.75 0 0 1 .75-.75h19.5a.75.75 0 0 1 .75.75v11.379a.75.75 0 0 1-.22.53L14.16 22.28a.75.75 0 0 1-.53.219zm0 1.5a2.25 2.25 0 0 0 1.59-.659l8.122-8.122A2.25 2.25 0 0 0 24 13.63V2.25A2.25 2.25 0 0 0 21.75 0H2.25A2.25 2.25 0 0 0 0 2.25v19.5A2.25 2.25 0 0 0 2.25 24h11.379zM15 23.115V15.75a.75.75 0 0 1 .75-.75h7.365a.75.75 0 0 0 0-1.5H15.75a2.25 2.25 0 0 0-2.25 2.25v7.365a.75.75 0 0 0 1.5 0z">
+                </path>
+            </svg>
+            <h4 class="my-4" style="color:#888888">No Reviews</h4>
         </div>
     </div>
 </div>
