--- a/src/app/Components/dashboard-home/dashboard-home.component.scss
+++ b/src/app/Components/dashboard-home/dashboard-home.component.scss
@@ -37,3 +37,14 @@ footer {
 
   color: white;
 }
+.acc {
+  cursor: pointer;
+}
+.propImg {
+  border-radius: 50%;
+  height: 35px;
+  width: 35px;
+}
+.spinner {
+  height: 500px;
+}
