--- a/src/app/Components/reservations/reservations.component.html
+++ b/src/app/Components/reservations/reservations.component.html
@@ -1,31 +1,34 @@
-<div>
-    <h1 class="mb-4">Reservations</h1>
-    <div *ngIf="bookings" class="mat-elevation-z8">
+<div *ngIf="isLoading" class="d-flex justify-content-center align-items-center spinner">
+    <mat-spinner></mat-spinner>
+</div>
+<div class="container py-5" *ngIf="!isLoading">
+    <h1 class="mb-4" *ngIf="bookings.length>0">Reservations</h1>
+    <div *ngIf="bookings.length>0" class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" class="w-100 ">
 
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef>Guest name</th>
-                <td mat-cell *matCellDef="let element"> {{element.guestId}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.guestId.username}} </td>
             </ng-container>
 
 
             <!-- Weight Column -->
             <ng-container matColumnDef="startAt">
                 <th mat-header-cell *matHeaderCellDef> Check in </th>
-                <td mat-cell *matCellDef="let element"> {{element.startAt}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.startAt| date:'mediumDate'}} </td>
             </ng-container>
 
             <!-- Symbol Column -->
             <ng-container matColumnDef="endAt">
                 <th mat-header-cell *matHeaderCellDef> Check out </th>
-                <td mat-cell *matCellDef="let element"> {{element.endAt}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.endAt | date:'mediumDate'}} </td>
             </ng-container>
 
             <ng-container matColumnDef="createdAt">
                 <th mat-header-cell *matHeaderCellDef> Booked on </th>
-                <td mat-cell *matCellDef="let element"> {{element.createdAt}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.createdAt | date:'mediumDate'}} </td>
             </ng-container>
 
             <ng-container matColumnDef="totalPrice">
@@ -37,16 +40,31 @@
                 <th mat-header-cell *matHeaderCellDef> Days </th>
                 <td mat-cell *matCellDef="let element"> {{element.days}} </td>
             </ng-container>
+            <ng-container matColumnDef="cancel">
+                <th mat-header-cell *matHeaderCellDef> Cancel </th>
+                <td mat-cell *matCellDef="let element"> <button mat-icon-button [matMenuTriggerFor]="menu"
+                        aria-label="Example icon-button with a menu">
+                        <mat-icon>more_vert</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                        <button mat-menu-item>
+                            <mat-icon>cancel</mat-icon>
+
+                            <span mat-stroked-button (click)="openSnackBar(element._id)"> Ask
+                                guest to cancel</span>
+
+
+                        </button>
+                    </mat-menu>
+                </td>
+            </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
-            aria-label="Select page of periodic elements">
-        </mat-paginator>
     </div>
-    <div *ngIf="!bookings">
+    <div *ngIf="bookings.length<=0">
         <div class="d-flex  my-5 py-5 justify-content-lg-center align-items-center flex-column">
             <svg data-test-id="default-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="70px"
                 fill="#888888" height="70px" class="bui-empty-state__icon">
